# simple-fastapi-template

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  compose.test.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: run-tests.yml
alembic/: env.py
alembic/versions/: 2023_09_25_2328-75f5ed60fe36_init.py
api/: config.py  main.py
api/database/: __init__.py  db.py
api/exceptions/: status_4xx.py
api/models/: todo.py  user.py
api/routers/: auth.py  todo.py  user.py
api/schemas/: auth.py  base.py  todo.py  user.py
api/services/: auth.py  todo.py  user.py
api/settings/: constant.py  logging.py
tests/: conftest.py  constant.py  test_todo.py  test_user.py
